# protocol_monk

./: .env.example  .gitignore  GETTING_STARTED.md  LICENSE  MANIFEST.in  NEURALSYM_V1_SPEC.md  README.md  README_EDA.md  TREE.md  __init__.py  async_input_fix.md.txt  compare_models.py  debug_neuralsym.py  debug_sandbox.py  debug_tui.py  environment.yml  environment_check.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_textual_ui.py  run_textual_with_agent.py  skill_runtime.py  style_test.py  system_prompt.txt  system_prompt_lite.txt  system_prompt_verbose.txt  taor_loop.py  test_agent_integration.py  test_context_manager_fixes.py  test_dev_ui.py  test_file.txt  test_mock_agent.py  test_neuralsym.py  test_no_prompt.py  test_ollama_api.py  test_ollama_clean.py  test_ollama_final.py  test_ollama_simple.py  (+10 more)
.github/workflows/: build.yml  package-release.yml
NeuralSym/: guidance.py  integrated_small_model_guidance.py  simple_enhanced_kg_demo.py  simulation.py  simulation_report.html  small_model_guidance.py  small_model_knowledge.py  small_model_patterns.py  small_model_simulation.py
NeuralSym/guidance/: unified.py
NeuralSym/knowledge/: __init__.py  base.py  graph.py  persistence.py  query_engine.py  risk_analyzer.py
NeuralSym/patterns/: __init__.py  analyzer.py  base.py  persistence.py  predictor.py  sequence_analyzer.py  temporal_analyzer.py
NeuralSym/scripts/: dashboard.py  example_integration.py  example_usage.py  guidance.py  guidance_templates.py  simple_enhanced_kg_demo.py  simulation.py  test_small_llm_guidance.py
NeuralSym/tools/: stream_parser.py
Protocol Monk/Protocol Monk/: main.swift
Protocol Monk/Protocol Monk.xcodeproj/: project.pbxproj
agent/: __init__.py  async_main_loop.py  base_model_client.py  buffered_model_client.py  command_dispatcher.py  core.py  core_exceptions.py  enhanced_tool_buffer.py  events.py  exceptions.py  interfaces.py  loops.py  mock_event_agent.py  model_client.py  monk.py  provider_registry.py  scratch_manager.py  service.py  structs.py  taor_loop.py  tool_call_buffer.py  tool_executor.py  usage_ledger.py
agent/context/: __init__.py  coordinator.py  exceptions.py  exceptions_expanded.py  file_tracker.py  file_tracker_v2.py  logic.py  manager.py  manager_v2.py  message.py  model_error_prompts.py  neural_sym_integration.py  pruner.py  store.py  structs.py  token_accountant.py  token_manager_v2.py
agent/core/: __init__.py  execution.py  service.py  state_machine.py
agent/logic/: parsers.py  streaming.py
agent/model/: exceptions.py
agent/model_manager/: __init__.py  loader.py  scanner.py  selector.py  structs.py
agent/providers/: __init__.py  mlx_lm_model_client.py  ollama_model_client.py  (+3 more)
config/: __init__.py  bootstrap.py  models.json  openrouter_models.example.json  openrouter_models.json  session.py  settings.py  static.py
debug/: verify_async_input_only.py  verify_implementation.py
docs/: Path_Validation_Web.txt  README.md
events/: input_events.py
exceptions/: __init__.py  agent.py  base.py  bus.py  config.py  context.py  model.py  provider.py  tools.py
integration/: async_input_example.py  test_ollama_message_normalization.py  test_textual_chat_flow.py  test_textual_detail_modal.py  test_textual_selection_cancel.py  test_textual_tool_preview.py
orthocal/: __init__.py  service.py
plugins/: __init__.py
prompts/: __init__.py  compact_system_prompt.txt  orthocal_briefing_prompt.txt  session_signoff_prompt.txt
protocol/: __init__.py  bus.py  command_dispatcher.py  events.py  objects.py
providers/: __init__.py  base.py  factory.py  ollama.py  openrouter.py
scripts/: OPENROUTER_MAP_UPDATE_GUIDE.md  analyze_session.py  fetch_model_config.py  fetch_openrouter_model_config.py  import_neuralsym_session.py  install_global_command.sh  setup_wizard.py  update_file_tools.py
tests/: test_file_tracker.py  test_json_parser.py  test_provider_outbound_pipeline.py
tools/: __init__.py  _constants.py  base.py  defaults.py  output_contract.py  path_validator.py  registry.py
ui/: __init__.py  animations.py  async_input_interface.py  async_keyboard_capture.py  async_prompts.py  base.py  boot.py  cli.py  common.py  custom_matrix.py  dev.py  input_safety_wrapper.py  plain.py  prayer_rope.py  prompts.py  rich_ui.py  stream_processor.py  styles.py  terminal_utils.py  tool_output_presenter.py
ui/rich/: app.py  (+11 more)
utils/: __init__.py  clipboard_cleaner.py  debug_logger.py  enhanced_logger.py  environment_check.py  exceptions.py  json_parser.py  json_parser_factory.py  json_parser_v2.py  logger.py  model_discovery.py  openrouter_discovery.py  openrouter_model_map.py  proper_tool_calling.py  retry.py  scratch.py  semantic_json_parser.py  sensitive_str.py  session_transcript.py  token_estimation.py
(+102 files in other folders)
