[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protocol-monk"
version = "0.1.0"
description = "Terminal-based AI agent with reliable task execution"
readme = "docs/README.md"
license = {text = "Demo License - See LICENSE file for restrictions"}
authors = [
    {name = "Protocol Monk Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "tiktoken>=0.5.0",
    "requests>=2.25.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "pylint>=2.15.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
monk = "main:main"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["agent", "ui", "tools", "config"]
known_third_party = ["abc", "ast", "asyncio", "colorama", "dataclasses", "dotenv", "groq", "importlib", "json", "logging", "numpy", "openai", "os", "pathlib", "pydantic", "pytest", "random", "re", "rich", "subprocess", "sys", "time", "torch", "tqdm", "typing", "uuid", "yaml"]
